[package]
name = "rotonda-fsm"
version = "0.1.0-dev"
edition = "2021"
authors = ["The NLnet Labs RPKI Team <rpki@nlnetlabs.nl>"]
description = "Protocol state machines for Rotonda data ingress/egress"
repository = "https://github.com/NLnetLabs/rotonda-fsm"
license = "BSD-3-Clause"
readme = "README.md"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["signal"] }


[dependencies]
bytes = "1.1.0"
env_logger = "0.9.0"
log = { version = "0.4.17" }
octseq = { git = "https://github.com/NLnetLabs/octseq", features = ["bytes"] }
#routecore = { git = "https://github.com/NLnetLabs/routecore", branch = "aspath-with-hops", features = ["bmp"] }
routecore = { path = "../routecore", features = ["bmp"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "sync", "rt-multi-thread", "time"] }
