[package]
name = "rotonda-fsm"
version = "0.1.0-dev"
edition = "2021"
authors = ["The NLnet Labs RPKI Team <rpki@nlnetlabs.nl>"]
description = "Protocol state machines for Rotonda data ingress/egress"
repository = "https://github.com/NLnetLabs/rotonda-fsm"
license = "BSD-3-Clause"
readme = "README.md"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.9.0"
tokio = { version = "1", features = ["io-std", "signal"] }

[dependencies]
bytes = "1.1.0"
log = { version = "0.4.17" }
octseq = { git = "https://github.com/NLnetLabs/octseq", features = ["bytes"] }
routecore = { version = "0.4.0-dev", features = ["bgp", "bmp"], git = "https://github.com/NLnetLabs/routecore.git" }
tokio = { version = "1", features = ["io-util", "macros", "net", "sync", "rt-multi-thread", "time"] }
