[package]
name = "rotonda-fsm"
version = "0.1.0-rc0"
edition = "2021"
authors = ["NLnet Labs <routing-team@nlnetlabs.nl>"]
description = "BGP/BMP state machines for Rotonda"
repository = "https://github.com/NLnetLabs/rotonda-fsm"
license = "BSD-3-Clause"
readme = "README.md"

[dependencies]
bytes       = "1.5.0"
log         = { version = "0.4.17" }
octseq      = { version = "0.4.0", features = ["bytes"] }
routecore   = { version = "0.4.0-rc0", features = ["bgp", "bmp"] }
tokio       = { version = "1", features = ["io-util", "macros", "net", "sync", "rt-multi-thread", "time"] }

[dev-dependencies]
clap        = { version = "4", features = ["derive"] }
env_logger  = "0.10.0"
tokio       = { version = "1", features = ["io-std", "signal"] }